# MarketRuns

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analysis/: market_data.py  visualize_selling_timing.R
analysis/derived/: __init__.py  (+30 more)
issues/: issue_04_participants_sell_same_price.md  issue_08_selling_timing.md  issue_100_did_learning_communication.md  issue_108_group_welfare.md  issue_109_equilibrium_simulation.md  issue_111_welfare_regression.md  issue_112_presell_emotions.md  issue_11_holdout_liquidation_analysis.md  issue_124_selling_behavior_tables.md  issue_126_tobit_seller_interactions.md  issue_12_fix_payoffs.md  issue_15_imotions_documentation.md  issue_18_ols_emotions_traits.md  issue_19_traits_first_sellers.md  issue_25_imotions_period_audit.md  issue_26_add_period_control.md  issue_31_fix_random_effects.md  issue_35_preliminary_results.md  issue_39_panel_a_interactions.md  issue_40_ci_difference_plots.md  issue_45_restructure_paper_tables.md  issue_46_trait_correlation_table.md  issue_48_risk_tolerance.md  issue_60_swap_logit_clm.md  issue_61_tobit_n_sellers.md  issue_63_randomized_params_table.md  issue_68_re_logit_treatment.md  issue_69_cox_survival_regression.md  issue_75_cox_to_section4.md  issue_76_revise_table4_summary_statistics.md  issue_80_restructure_table6_appf.md  issue_82_restructure_table4.md  issue_83_restructure_table6_appf.md  issue_84_restructure_table7.md  issue_95_valence_only_regressions.md  issue_96_experiment_flow_diagram.md
livegame/: settings.py
nonlivegame/: settings.py
nonlivegame_tr2/: settings.py
wiki/: _index.md
(+359 files in other folders)
