[project]
name = "marketruns"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "otree>=5.11.2",
    "matplotlib>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marketruns"]
